Updated index.html file in Assignment-1

--- a/Assignment-1/index.html
+++ b/Assignment-1/index.html
@@ -3,19 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HTML Basics Assignment</title>
 </head>
 <body>
-    <thead>
+    <header>
         <h1>Akanksha Singh</h1>
-        <p>Hello, My name Akanksha I am from varanasi Uttar Pradesh Recently completed by MCA from Dev Bhoomi Uttarakhand Univesrity</p>
-        <image src="" alt>
-        <a href="">About</a>
-        <a href="">Contact Us</a>
-        <a href=""></a>
-    </thead>
-    <tfooter>
-        <h2>Akanksha Singh ,2025</h2>
-    </tfooter>
-</body>
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">About Me</a>
+            <a href="#">Projects</a>
+        </nav>   
+    </header>
+    <main>
+        <section>
+            <h2>About Me</h2>
+            <p>Hello, My name Akanksha I am from varanasi Uttar Pradesh Recently completed by MCA from Dev Bhoomi Uttarakhand Univesrity</p>
+            <img src="img.jpg" alt="mineImg"> 
+        </section>
+    </main>
+    <footer>
+        <p>© Akanksha Singh, 2025</h2>
+    </footer>
+ </body>
 </html>
